# haskell-todo

./: LICENSE  haskell-todo.cabal
src/: App.hs  CommandParser.hs  Main.hs  Models.hs  Persistence.hs  Reducer.hs
test/: CommandParserSpec.hs  ModelsSpec.hs  PersistenceSpec.hs  ReducerSpec.hs  Test.hs
