name:                haskell-todo
version:             0.1.0.0
       
license:             MIT
license-file:        LICENSE
author:              Alexandr
          
build-type:          Simple
cabal-version:       >=1.10

executable haskell-todo
  main-is:             Main.hs  
  build-depends:       base >=4.9 && < 4.10, directory == 1.3.1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

library
  hs-source-dirs:      src
  build-depends:       base >= 4.9 && < 4.10, directory == 1.3.1.5
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     App, Reducer, CommandParser, Models, Persistence

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  build-depends:       haskell-todo, base, hspec == 2.4.4
  default-language:    Haskell2010
  ghc-options:         -Wall
